# REDesk

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
assets/logo/: README.md  REDesk.icns
cmake/: PackageDeploy.cmake  REDeskOptions.cmake  Sanitizers.cmake  redesk_version.h.in
core/: CMakeLists.txt
core/capture/: CMakeLists.txt  capturer.h  capturer_stub.cpp
core/codec/: CMakeLists.txt  codec.h  codec_stub.cpp
core/common/: CMakeLists.txt  logging.cpp  logging.h  types.h
core/crypto/: CMakeLists.txt  crypto.h  crypto_stub.cpp
core/input/: CMakeLists.txt  input.h  input_stub.cpp
core/session/: CMakeLists.txt  session.cpp  session.h
core/transport/: CMakeLists.txt  transport.h  transport_stub.cpp
docs/adr/: ADR-001-architecture.md
packaging/linux/: Dockerfile  build.sh
platform/: CMakeLists.txt  platform_backends.h
platform/linux/: CMakeLists.txt  capturer_pipewire.cpp  encoder_vaapi.cpp  input_ladder.cpp  keystore_libsecret.cpp  unwired_linux.cpp
platform/macos/: CMakeLists.txt  capturer_sck.mm  encoder_videotoolbox.mm  input_cgevent.mm  keystore_keychain.mm  stub_macos.cpp  unwired_macos.cpp
platform/windows/: CMakeLists.txt  capturer_dxgi.cpp  encoder_mf.cpp  input_sendinput.cpp  keystore_dpapi.cpp  named_pipe_acl.h
proto/: CMakeLists.txt  README.md  codec.proto.h  ipc.proto.h  transport.proto.h
server/: CMakeLists.txt  README.md
server/common/: CMakeLists.txt  net.cpp  net.h
server/relay/: CMakeLists.txt  allocation_table.cpp  allocation_table.h  main.cpp
server/rendezvous/: CMakeLists.txt  main.cpp  protocol.cpp  protocol.h  registry_store.cpp  registry_store.h  signer.cpp  signer.h
service/: CMakeLists.txt
service/src/: engine_contracts.h  engine_stubs.cpp  ipc_server.cpp  ipc_server.h  main.cpp  service_lifecycle.cpp  service_lifecycle.h
tests/: CMakeLists.txt  redesk_test.h  stub_backends.h  test_codec_negotiation.cpp  test_codec_roundtrip.cpp  test_crypto_handshake.cpp  test_proto_framing.cpp  test_session_permissions.cpp  test_transport_loopback.cpp
ui/: CMakeLists.txt  MacOSXBundleInfo.plist.in  redesk.desktop
ui/qml/: Card.qml  LocalScreenPreview.qml  Main.qml  SessionView.qml  Theme.qml
ui/qml/components/: IdField.qml  Pill.qml  PrimaryButton.qml
ui/src/: LocalScreenSource.cpp  LocalScreenSource.h  ScreenView.cpp  ScreenView.h  ServiceClient.cpp  ServiceClient.h  SessionController.cpp  SessionController.h  VideoItem.cpp  VideoItem.h  main.cpp
